--- a/app/views/rrhh/agente/verAgente.scala.html
+++ b/app/views/rrhh/agente/verAgente.scala.html
@@ -4,7 +4,7 @@
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/rrhh/agentes.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.rrhh.mainRrhh("Vista Agente",scripts) {
 	<div class="page-header">
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 		</div>
-	</div>		
+	</div>
 	<div class="row menu-acciones">
 		<div class="col-sm-10">
 			<a href="@controllers.rrhh.routes.AgentesController.crearAgente()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo</a>
@@ -44,10 +44,10 @@
 			<a href="@controllers.rrhh.routes.AgentesController.eliminarAgente(agente.id)@UriTrack.get("&")"  class="btn btn-default delete-confirm-link"><i class="glyphicon glyphicon-trash icono-eliminar"></i> Eliminar</a>
 		</div>
 		<div class="col-sm-2">
-			<a href="@UriTrack.getOnNull(controllers.rrhh.routes.AgentesController.indexAgente().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a> 
-		</div> 
-	</div>	
-	
+			<a href="@UriTrack.getOnNull(controllers.rrhh.routes.AgentesController.indexAgente().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
+		</div>
+	</div>
+
 	<input type="hidden" id="agenteId" name="agenteId" value="@agente.id"/>
 	@views.html.tags.successError()
 	<div class="row">
@@ -62,40 +62,40 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(agenteForm("planta"), options = Seq("true"->"Planta"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 				<div class="col-sm-7">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(agenteForm("planta"),options = Seq("false"->"Contratado"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 			</div>
-		</div> 
-		
+		</div>
+
 		<div class="col-sm-2">
 			<b>¿Agente activo?</b>
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(agenteForm("activo"), options = Seq("true"->"Si"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 				<div class="col-sm-9">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(agenteForm("activo"),options = Seq("false"->"No"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 			</div>
-		</div> 	
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
 				<label class="control-label">Tipo Relacion Laboral</label>
@@ -120,7 +120,7 @@
 				<label class="control-label">Matr&iacute;cula</label>
 				<p class="form-control-static form-control">@agente.pin</p>
 			</div>
-		</div> 
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-2">
@@ -134,12 +134,12 @@
 				<label class="control-label">Cuil</label>
 				<p class="form-control-static form-control">@agente.cuit</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
 				<label for="creacion_orden_compra" class="control-label"> Sexo</label>
 				<p class="form-control-static form-control">
-				
+
 					@agente.sexo match {
 				    	case "male" => {Masculino}
 				    	case "famele" => {Femenino}
@@ -211,7 +211,7 @@
 				<p class="form-control-static form-control">@agenteForm("nro_legajo_externo").value </p>
 			</div>
 		</div>
-		
+
 		<div class="col-sm-2">
 			<div class="form-group">
 				<label class="control-label">Asignaciones Familiares</label>
@@ -225,7 +225,7 @@
 		<div class="col-sm-2">
 			<label class="control-label">Licencia Conducir</label>
 			<p class="form-control-static form-control">@if(agente.tipo_licencia_conducir_id != null){@agente.tipoLicenciaConducir.nombre}</p>
-				 			
+
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
@@ -239,7 +239,13 @@
 				<p class="form-control-static form-control">@agenteForm("cud").value</p>
 			</div>
 		</div>
-	</div>	
+		<div class="col-sm-2">
+			<div class="form-group">
+				<label class="control-label">Limite Guardia</label>
+				<p class="form-control-static form-control">@agenteForm("limite_guardia").value</p>
+			</div>
+		</div>
+	</div>
 	<!-- <div class="row">
 		<div class="col-sm-12">
 			<hr>
@@ -249,16 +255,16 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<div class="form-group">
-				<label for="inputConyugueNombre" class="control-label">Nombre</label> 
+				<label for="inputConyugueNombre" class="control-label">Nombre</label>
 				<p class="form-control-static form-control">@agente.conyugue_nombre</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputConyugueDni" class="control-label">DNI</label> 
+				<label for="inputConyugueDni" class="control-label">DNI</label>
 				<p class="form-control-static form-control">@agente.conyugue_dni</p>
 			</div>
-		</div> 
+		</div>
 	</div> -->
 	<div class="row">
 		<div class="col-sm-12">
@@ -267,70 +273,70 @@
 		</div>
 	</div>
 	<div class="row">
-		
+
 			<div class="col-sm-2">
 				<div class="form-group">
-					<label for="inputCalle" class="control-label">Calle Banco</label> 
+					<label for="inputCalle" class="control-label">Calle Banco</label>
 					<p class="form-control-static form-control">@agente.calle_banco</p>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="form-group">
-					<label for="inputCalle" class="control-label">Calle</label> 
+					<label for="inputCalle" class="control-label">Calle</label>
 					<p class="form-control-static form-control">@agente.calle</p>
 				</div>
-			</div> 
-		
+			</div>
+
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputNumero" class="control-label">Número</label> 
+				<label for="inputNumero" class="control-label">Número</label>
 				<p class="form-control-static form-control">@agente.numero</p>
 			</div>
 		</div>
 		<div class="col-sm-1">
 			<div class="form-group">
-				<label for="inputPiso" class="control-label">Piso</label> 
+				<label for="inputPiso" class="control-label">Piso</label>
 				<p class="form-control-static form-control">@agente.piso</p>
 			</div>
 		</div>
 		<div class="col-sm-1">
 			<div class="form-group">
-				<label for="inputDepto" class="control-label">Depto</label> 
+				<label for="inputDepto" class="control-label">Depto</label>
 				<p class="form-control-static form-control">@agente.depto</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-1">
 			<div class="form-group">
-				<label for="inputCP" class="control-label">C.P</label> 
+				<label for="inputCP" class="control-label">C.P</label>
 				<p class="form-control-static form-control">@agente.zip</p>
 			</div>
-		</div> 
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputTelefono" class="control-label">Tel&eacute;fono</label> 
+				<label for="inputTelefono" class="control-label">Tel&eacute;fono</label>
 				<p class="form-control-static form-control">@agente.telefono</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputCelular" class="control-label">Celular</label> 
+				<label for="inputCelular" class="control-label">Celular</label>
 				<p class="form-control-static form-control">@agente.mobile</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputFax" class="control-label">Tel. Alternativo</label> 
+				<label for="inputFax" class="control-label">Tel. Alternativo</label>
 				<p class="form-control-static form-control">@agente.fax</p>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-3">
 			<div class="form-group">
-				<label for="inputEmail" class="control-label">Email</label> 
+				<label for="inputEmail" class="control-label">Email</label>
 				<p class="form-control-static form-control">@agente.email</p>
 			</div>
-		</div> 
+		</div>
 	</div>
 	<div class="row contenedorUbicacion">
 		<div class="col-sm-4">
@@ -339,14 +345,14 @@
 				<p class="form-control-static form-control">@if(agente.localidad!= null){@agente.localidad.provincia.pais.nombre}</p>
 			</div>
 		</div>
-	
+
 		<div class="col-sm-4">
 			<div class="seleccionProvincia form-group">
 				<label for="" class="control-label">Provincia</label>
 				<p class="form-control-static form-control">@if(agente.localidad!= null){@agente.localidad.provincia.nombre}</p>
 			</div>
 		</div>
-	
+
 		<div class="col-sm-4">
 			<div class="seleccionLocalidad form-group">
 				<label for="" class="control-label">Localidad</label>
@@ -387,7 +393,7 @@
 				<p class="form-control-static form-control">@if(agente.tipoResidencia != null){@agente.tipoResidencia.nombre}</p>
 			</div>
 		</div>
-		
+
 		<div class="col-sm-4">
 			<div class="form-group">
 				<label class="control-label">Especialidad</label>
@@ -406,20 +412,20 @@
 			@views.html.rrhh.agente.contenidoTabNovedad(false, agenteForm, agente:Agente)
 		</div>
 	</div>
-	
-	
+
+
 	@views.html.rrhh.agente.tabsAgente(false,agenteForm,agente,pl)
 	<hr/>
 	<h4>Estado actual: 	<b>@agente.estado.nombre</b></h4>
-	<div class="row margin-bottom-25">	
-		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(agente.estado.orden,models.Estado.TIPO_AGENTE)) {	
+	<div class="row margin-bottom-25">
+		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(agente.estado.orden,models.Estado.TIPO_AGENTE)) {
 			@if(estado.orden <= 5) {
 				<div class="col-sm-3">
 					<a href="@controllers.rrhh.routes.AgentesController.cambiarEstado(agenteForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
 						<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
 					</a>
 				</div>
-				
+
 			}
 		}
 		@if(agente.estado.id == models.Estado.AGENTE_CANCELADO) {
