--- a/app/views/rrhh/agente/formAgente.scala.html
+++ b/app/views/rrhh/agente/formAgente.scala.html
@@ -192,7 +192,7 @@
 		<div class="col-sm-2">
 			<label class="control-label">
 				Asignaciones Familiares
-				@select(agenteForm("asignacion_familiar"),options("true"->"SI","false"->"NO"), 'class -> "form-control select")
+				@select(agenteForm("asignacion_familiar"),options("false"->"NO","true"->"SI"), 'class -> "form-control select")
 			</label>
 		</div>
 	</div>
