--- a/app/views/rrhh/profesion/formProfesion.scala.html
+++ b/app/views/rrhh/profesion/formProfesion.scala.html
@@ -12,4 +12,11 @@
 				}
 			</div>
 		</div>
+		<div class="col-sm-4">
+			<div class="checkbox">
+				<label>
+					Asistencial @checkbox(profesionForm("asistencial"))
+				</label>
+			</div>
+		</div>
 	</div>
