--- a/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
+++ b/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
@@ -317,21 +317,21 @@
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion MACRO SUELDOS NUEVO</a>
 
 							</div>
-							<div class="col-sm-12 margin-bottom-25">
+							<!-- <div class="col-sm-12 margin-bottom-25">
 								<a id="exportBanco" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportBanco(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion banco</a>
 
-							</div>
+							</div>  -->
 							<div class="col-sm-12 margin-bottom-25">
 								<a href="@controllers.haberes.routes.LiquidacionAccionesController.exportIps(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-info-sign"></i> Datos IPS</a>
 
 							</div>
-							<div class="col-sm-12 margin-bottom-25">
+							<!--<div class="col-sm-12 margin-bottom-25">
 								<a href="@controllers.haberes.routes.LiquidacionAccionesController.exportAfip(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-th-large"></i> Datos AFIP</a>
 
-							</div>
+							</div> -->
 							<div class="col-sm-12">
 								<a href="@controllers.haberes.routes.LiquidacionPuestosReportesController.libroSueldos(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-align-justify"></i> Libro de Sueldos</a>
