--- a/app/views/presupuesto/balancePresupuestario/indexBalancePresupuestario.scala.html
+++ b/app/views/presupuesto/balancePresupuestario/indexBalancePresupuestario.scala.html
@@ -1,6 +1,6 @@
 @(buscador: utils.pagination.Pagination[BalancePresupuestario], formBuscador: DynamicForm,lbp:List[BalancePresupuestario],idEjercicio:String)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.math.BigDecimal;var saldoTotal=new java.math.BigDecimal(0);var saldoDisponible=new java.math.BigDecimal(0);var preventivoTotal=new java.math.BigDecimal(0);var preventivoDisponible=new java.math.BigDecimal(0);var definitivoTotal=new java.math.BigDecimal(0);var definitivoDisponible=new java.math.BigDecimal(0);var obligaciónTotal=new java.math.BigDecimal(0);var obligaciónDisponible=new java.math.BigDecimal(0);var pago=new java.math.BigDecimal(0);var epreventivoTotal=new java.math.BigDecimal(0);var epreventivoDisponible=new java.math.BigDecimal(0);var edefinitivoTotal=new java.math.BigDecimal(0);var edefinitivoDisponible=new java.math.BigDecimal(0);var eobligaciónTotal=new java.math.BigDecimal(0);var eobligaciónDisponible=new java.math.BigDecimal(0);var epago=new java.math.BigDecimal(0);
 @views.html.presupuesto.mainPresupuesto("Balance presupuestario") {
 
@@ -17,86 +17,91 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  
-				  	
- 				  	
-				  	
-				  	<li role="presentation"><a role="menuitem" id="accionReporteGeneralPorExpedientePorCuenta" 
-				    tabindex="-1" 
+
+
+
+				  	<li role="presentation">
+				  	<a role="menuitem" id="accionReporteGeneralPorCuenta"
+				    tabindex="-1"
+				    href="#" data-url="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.modalReporteBalancePorCuenta()">
+				    Reporte General por Cuenta</a></li>
+
+				  	<li role="presentation"><a role="menuitem" id="accionReporteGeneralPorExpedientePorCuenta"
+				    tabindex="-1"
 				    href="#" data-url="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.modalReporteBalancePorCuentaPorExpediente(1)">
 				    Reporte General por Cuenta por Expedientes</a></li>
-				  	
-				  	<li role="presentation"><a role="menuitem" id="accionReporteGeneralPorExpedientePorCuentaResumido" 
-				    tabindex="-1" 
+
+				  	<li role="presentation"><a role="menuitem" id="accionReporteGeneralPorExpedientePorCuentaResumido"
+				    tabindex="-1"
 				    href="#" data-url="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.modalReporteBalancePorCuentaPorExpediente(2)">
 				    Reporte General por Cuenta por Expedientes Resumido</a></li>
-				  	 
+
 				   	<!--  ---------------------------------------------------------------------------- -->
-				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(13)">
 				    Reporte 2022 Saldos en Preventivos</a></li>
-				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(12)">
 				    Reporte 2021 Saldos en Preventivos</a></li>
-				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(9)">
 				    Reporte 2020 Saldos en Preventivos</a></li>
-				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				   	<li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(8)">
 				    Reporte 2019 Saldos en Preventivos</a></li>
-				  
-				    <!-- <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+
+				    <!-- <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(6)">
 				    Reporte 2017 Saldos en Preventivos</a></li>
-				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(5)">
 				    Reporte 2016 Saldos en Preventivos</a></li>
-				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(4)">
 				    Reporte 2015 Saldos en Preventivos</a></li>
-				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta" 
-				    data-url="" tabindex="-1" 
+				    <li role="presentation"><a role="menuitem" id="reporteGeneralPorExpedientePorCuenta"
+				    data-url="" tabindex="-1"
 				    href="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.reporteBalanceDiferenciaPreventivoDefinitivo(3)">
 				    Reporte 2014 Saldos en Preventivos</a></li> -->
-				    <li><a id="reporteBalancePorFecha" href="#" 
+				    <li><a id="reporteBalancePorFecha" href="#"
 				    data-url="@controllers.presupuesto.routes.BalancePresupuestarioReportesController.modalReporteBalancePorFecha()">Reporte por Fecha</a></li>
 				  </ul>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
-	
-	
+
+
 	<div id="actions">
 
-		
+
 		<form action="" method="GET">
 
-				
-		<div class="row">		
+
+		<div class="row">
 			<div class="col-sm-4">
 				<label for="cuenta" class="control-label">Cuenta Presupuestaria Padre</label>
 				<div class="input-group">
 					@inputText(formBuscador("cuenta"), 'class -> "form-control", 'id -> "cuentaAnalitica")
 					@inputText(formBuscador("cuenta_analitica_padre_id"), 'hidden -> "hidden", 'id -> "cuentaAnalitica_id")
 					<span class="input-group-addon">
-						<a href="#" 
-						   id="searchCuentaAnalitica" 
+						<a href="#"
+						   id="searchCuentaAnalitica"
 						   class="searchModal"
-						   data-title="Selección de cuenta analítica" 
-						   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-						   data-height="650" 
-						   data-width="700" 
-						   data-listen="modal.seleccion.cuentaAnalitica.simple" 
-						   data-label="#cuentaAnalitica" 
+						   data-title="Selección de cuenta analítica"
+						   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+						   data-height="650"
+						   data-width="700"
+						   data-listen="modal.seleccion.cuentaAnalitica.simple"
+						   data-label="#cuentaAnalitica"
 						   data-field="#cuentaAnalitica_id">
 						   <i class="glyphicon glyphicon-search"></i>
 						 </a>
@@ -109,15 +114,15 @@
 					@inputText(formBuscador("cuentaHija"), 'class -> "form-control", 'id -> "cuentaAnaliticaHija")
 					@inputText(formBuscador("cuenta_analitica_hija_id"), 'hidden -> "hidden", 'id -> "cuentaAnaliticaHija_id")
 					<span class="input-group-addon">
-						<a href="#" 
-						   id="searchCuentaAnalitica" 
+						<a href="#"
+						   id="searchCuentaAnalitica"
 						   class="searchModal"
-						   data-title="Selección de cuenta analítica" 
-						   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-						   data-height="650" 
-						   data-width="700" 
-						   data-listen="modal.seleccion.cuentaAnalitica.simple" 
-						   data-label="#cuentaAnaliticaHija" 
+						   data-title="Selección de cuenta analítica"
+						   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+						   data-height="650"
+						   data-width="700"
+						   data-listen="modal.seleccion.cuentaAnalitica.simple"
+						   data-label="#cuentaAnaliticaHija"
 						   data-field="#cuentaAnaliticaHija_id">
 						   <i class="glyphicon glyphicon-search"></i>
 						 </a>
@@ -131,57 +136,57 @@
 						@inputText(formBuscador("expediente.id"), 'hidden -> "hidden", 'id -> "expediente_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchExpediente" 
-										data-title="Selección de expediente" 
-										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.expediente.simple" 
-										data-label="#expediente" 
+										id="searchExpediente"
+										data-title="Selección de expediente"
+										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.expediente.simple"
+										data-label="#expediente"
 										data-field="#expediente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
-			</div>			
+			</div>
 		 	<div class="col-sm-2">
 				<label class="control-label">Ejercicio
-				@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 
+				@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre},
 				'class -> "form-control select")
 				</label>
 			</div>
-		</div>		
-		<div class="row">		
+		</div>
+		<div class="row">
 			<!-- <div class="col-sm-2">
-				<label class="control-label"> 
+				<label class="control-label">
 					PROFE
 					@select(formBuscador("profe"),options(""->"","true"->"SI","false"->"NO"), 'class -> "form-control select")
 				</label>
-			</div>		 -->	
+			</div>		 -->
 			<div class="col-sm-2">
-					<label class="control-label"> 
+					<label class="control-label">
 						Tipo Cuenta
-						@select(formBuscador("tipo_cuenta_id"), 
+						@select(formBuscador("tipo_cuenta_id"),
 						TipoCuenta.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 					</label>
 				</div>
 			<div class="col-sm-2">
 				<label for="obpaciente" class="control-label">Obra Social Pac.</label>
-				<div class="input-group"> 
+				<div class="input-group">
 					@inputText(formBuscador("obrasocial.nombre"),'class -> "form-control", 'id -> "obrasocial", 'autocomplete -> "off")
 					@inputText(formBuscador("obrasocial_id"),'hidden -> "hidden", 'id -> "obrasocial_id")
 					<span class="input-group-addon">
-						<a href="#" id="searchObraSocial" 
-						data-title="Selección de obra social" 
-						data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()" 
-						data-height="650" data-width="700" 
-						data-listen="modal.seleccion.ob.simple" 
+						<a href="#" id="searchObraSocial"
+						data-title="Selección de obra social"
+						data-url="@controllers.compras.routes.ObrasSocialesController.modalBuscar()"
+						data-height="650" data-width="700"
+						data-listen="modal.seleccion.ob.simple"
 						data-label="#obrasocial" data-field="#obrasocial_id"><i class="glyphicon glyphicon-search"></i></a>
 					</span>
 				</div>
 			</div>
-		</div>	
-		<div class="row">		
+		</div>
+		<div class="row">
 			<div class="col-sm-2">
 				<div class="form-group">
 				<label for="nombre" class="control-label">&nbsp;</label>
@@ -197,15 +202,15 @@
 		</div>
 		</form>
 	</div>
-	
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran resultados</em>
         </div>
-        
+
     } else {
-		
+
 		<!-- Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).  -->
 		<table class="table table-bordered tablaPresupuesto">
 			<thead>
@@ -248,15 +253,15 @@
 					<td class="@if(presupuesto.definitivo.subtract(presupuesto.obligacion).compareTo(java.math.BigDecimal.ZERO) < 0){negativo}">
 						@(utils.NumberUtils.moneda(presupuesto.definitivo.subtract(presupuesto.obligacion)))
 					</td>
-					
+
 					<td>@(utils.NumberUtils.moneda(presupuesto.obligacion))</td>
 					<td class="@if(presupuesto.obligacion.subtract(presupuesto.pago).compareTo(java.math.BigDecimal.ZERO) < 0){negativo}">
 						@(utils.NumberUtils.moneda(presupuesto.obligacion.subtract(presupuesto.pago)))
 					</td>
-					
+
 					<td colspan="2">@(utils.NumberUtils.moneda(presupuesto.pago))</td>
 				</tr>
-			
+
 				@{saldoTotal = saldoTotal.add(BalancePresupuestario.getSaldoTotalPorCuenta(presupuesto.cuenta_analitica_padre_id,idEjercicio))}
 				@{saldoDisponible = saldoDisponible.add(BalancePresupuestario.getSaldoTotalPorCuenta(presupuesto.cuenta_analitica_padre_id,idEjercicio).subtract(presupuesto.preventivo))}
 				@{preventivoTotal = preventivoTotal.add(presupuesto.preventivo)}
@@ -283,7 +288,7 @@
 				</tr>
 			</tfoot>
         </table>
-		
+
 		@if(lbp != null){
 			<table class="table table-bordered tablaPresupuesto">
 				<thead>
@@ -305,7 +310,7 @@
 						<th colspan="2">Total</th>
 					</tr>
 				</thead>
-				<tbody>	
+				<tbody>
 			@for(l <- lbp) {
 				<tr>
 					<td>@l.expediente.nombre</td>
@@ -317,14 +322,14 @@
 					<td class="@if(l.definitivo.subtract(l.obligacion).compareTo(java.math.BigDecimal.ZERO) < 0){negativo}">
 						@(utils.NumberUtils.moneda(l.definitivo.subtract(l.obligacion)))
 					</td>
-					
+
 					<td>@(utils.NumberUtils.moneda(l.obligacion))</td>
 					<td class="@if(l.obligacion.subtract(l.pago).compareTo(java.math.BigDecimal.ZERO) < 0){negativo}">
 						@(utils.NumberUtils.moneda(l.obligacion.subtract(l.pago)))
 					</td>
-					
+
 					<td colspan="2">@(utils.NumberUtils.moneda(l.pago))</td>
-				</tr>	
+				</tr>
 				@{epreventivoTotal = epreventivoTotal.add(l.preventivo)}
 				@{epreventivoDisponible = epreventivoDisponible.add(l.preventivo.subtract(l.definitivo))}
 				@{edefinitivoTotal = edefinitivoTotal.add(l.definitivo)}
@@ -346,40 +351,45 @@
 						<td align="center"><b>@utils.NumberUtils.moneda(epago)</b></td>
 					</tr>
 				</tfoot>
-				
+
         	</table>
 		}
-		
-		
+
+
  	 }
 
 }
-		
+
 <script>
 $(function(){
 	$('#searchCuentaAnalitica').modalSearch();
 	$('#searchExpediente').modalSearch();
 	$('#searchObraSocial').modalSearch();
-	
-	$('#reporteBalancePorFecha').click( function() {  
+
+	$('#reporteBalancePorFecha').click( function() {
 		var url = $(this).attr("data-url");
 		dialogoPasarBorrador = crearDialogoGeneral(url);
 		dialogoPasarBorrador.dialog({title: "Reporte Balance por Fecha",width:850,height: 300,});
 	});
-	
-	$('#accionReporteGeneralPorExpedientePorCuenta').click( function() {  
+
+	$('#accionReporteGeneralPorCuenta').click( function() {
 		var url = $(this).attr("data-url");
 		dialogoPasarBorrador = crearDialogoGeneral(url);
 		dialogoPasarBorrador.dialog({title: "Reporte Balance",});
 	});
-	
-	$('#accionReporteGeneralPorExpedientePorCuentaResumido').click( function() {  
+
+	$('#accionReporteGeneralPorExpedientePorCuenta').click( function() {
+		var url = $(this).attr("data-url");
+		dialogoPasarBorrador = crearDialogoGeneral(url);
+		dialogoPasarBorrador.dialog({title: "Reporte Balance",});
+	});
+
+	$('#accionReporteGeneralPorExpedientePorCuentaResumido').click( function() {
 		var url = $(this).attr("data-url");
 		dialogoPasarBorrador = crearDialogoGeneral(url);
 		dialogoPasarBorrador.dialog({title: "Reporte Balance Resumido",});
 	});
-	
+
 });
 </script>
-	
-	
+
