--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -27,7 +27,7 @@
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 					<li role="presentation">
 						@if(recuperoFactura.cae != null){
-						<a role="menuitem" id="imprimirFacturaAfip" tabindex="-1" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
+						<a role="menuitem" class="imprimirFacturaAfip" tabindex="-1" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
 						}
 						<!-- <a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a> -->
 					</li>
