--- a/app/views/recupero/recuperoPlanilla/verPlanilla.scala.html
+++ b/app/views/recupero/recuperoPlanilla/verPlanilla.scala.html
@@ -1,7 +1,13 @@
-@(planillaForm: Form[models.recupero.RecuperoPlanilla], planilla: models.recupero.RecuperoPlanilla)
+@(planillaForm: Form[models.recupero.RecuperoPlanilla],
+planilla: models.recupero.RecuperoPlanilla,
+rf:List[models.recupero.RecuperoFactura],
+rc:List[models.recupero.RecuperoNotaCredito],
+rd:List[models.recupero.RecuperoNotaDebito],
+pa:List[models.recupero.RecuperoPago]
+)
 @import utils._
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/recupero/planilla.js")" type="text/javascript"></script>
 }
@@ -22,10 +28,10 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	<li><a id="reporteDesdePlanilla" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.informeDesdePlanilla(planilla.id)">Planilla Diaria</a></li>
-				  			
+
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -33,14 +39,14 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
 
 			</div>
 		</div>
 	</div>
-	
+
 @views.html.tags.successError()
 
 <div class="row menu-acciones">
@@ -59,7 +65,7 @@
 			<p class="form-control-static form-control">@planilla.numero</p>
 		</div>
 		<div class="col-sm-4">
-			<label class="control-label">Expediente</label> 
+			<label class="control-label">Expediente</label>
 			<p class="form-control-static form-control" style="height: 25px; overflow: hidden;">
 				@if(planilla.expediente != null){@planilla.expediente.getExpedienteEjercicio()}
 			</p>
@@ -69,16 +75,81 @@
 			<p class="form-control-static form-control">@planillaForm("fecha").value</p>
 		</div>
 		<div class="col-sm-4">
-			<label for="deposito" class="control-label">Institucion</label> 
+			<label for="deposito" class="control-label">Institucion</label>
 			<p class="form-control-static form-control">@planillaForm("deposito.nombre").value</p>
 		</div>
 	</div>
-		
-		
-	<hr />	
-		
-	 
-	 
+
+
+	<hr />
+	<table class="table table-striped table-bordered">
+		<thead>
+			<tr>
+				<th>FECHA</th>
+				<th>N° COMPROBANTE</th>
+				<th>MONTO</th>
+				<th>TIPO PAGO</th>
+				<th>FINANCIADOR</th>
+				<th>USUARIO</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr><td colspan="6" align="center"><b>FACTURAS</b></td></tr>
+			@for(rfx <- rf) {
+				<tr>
+
+					<td>@if(rfx.fecha != null){@(utils.DateUtils.formatDate(rfx.fecha))}</td>
+					<td>@if(rfx.numero != null){@(rfx.getNumeroFactura())}</td>
+					<td>@(utils.NumberUtils.moneda(rfx.getBase()))</td>
+					<td>@if(rfx.recuperoTipoPago != null){@(rfx.recuperoTipoPago.nombre)}</td>
+					<td>@if(rfx.cliente != null){@(rfx.cliente.nombre)}</td>
+					<td>@if(rfx.create_usuario != null){@(rfx.create_usuario.nombre)}</td>
+				</tr>
+			}
+			<tr><td colspan="6" align="center"></td></tr>
+			<tr><td colspan="6" align="center"><b>NOTAS CREDITOS</b></td></tr>
+			@for(rfx <- rc) {
+				<tr>
+
+					<td>@if(rfx.fecha != null){@(utils.DateUtils.formatDate(rfx.fecha))}</td>
+					<td>@if(rfx.numero != null){@(rfx.getNumero())}</td>
+					<td>@(utils.NumberUtils.moneda(rfx.getTotal()))</td>
+					<td></td>
+					<td>@if(rfx.recupero_factura.cliente != null){@(rfx.recupero_factura.cliente.nombre)}</td>
+					<td>@if(rfx.create_usuario != null){@(rfx.create_usuario.nombre)}</td>
+				</tr>
+			}
+			<tr><td colspan="6" align="center"></td></tr>
+			<tr><td colspan="6" align="center"><b>NOTAS DEBITOS</b></td></tr>
+			@for(rfx <- rd) {
+				<tr>
+
+					<td>@if(rfx.fecha != null){@(utils.DateUtils.formatDate(rfx.fecha))}</td>
+					<td>@if(rfx.numero != null){@(rfx.getNumero())}</td>
+					<td>@(utils.NumberUtils.moneda(rfx.getTotal()))</td>
+					<td></td>
+					<td>@if(rfx.recupero_factura.cliente != null){@(rfx.recupero_factura.cliente.nombre)}</td>
+					<td>@if(rfx.create_usuario != null){@(rfx.create_usuario.nombre)}</td>
+				</tr>
+			}
+			<tr><td colspan="6" align="center"></td></tr>
+			<tr><td colspan="6" align="center"><b>PAGOS</b></td></tr>
+			@for(rfx <- pa) {
+				<tr>
+
+					<td>@if(rfx.fecha != null){@(utils.DateUtils.formatDate(rfx.fecha))}</td>
+					<td>@if(rfx.recuperoFactura != null){@(rfx.recuperoFactura.getNumeroFactura())}</td>
+					<td>@(utils.NumberUtils.moneda(rfx.total))</td>
+					<td></td>
+					<td>@if(rfx.recuperoFactura.cliente != null){@(rfx.recuperoFactura.cliente.nombre)}</td>
+					<td>@if(rfx.create_usuario != null){@(rfx.create_usuario.nombre)}</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+
+
+
 }
 
 
