--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -148,5 +148,34 @@ $( function(){
 		});
 		return false;
 	});
+
+	$('.notaDebito').click( function() {
+
+		var url = $(this).attr("data-url");
+		var dialogo = $('<div></div>');
+
+		dialogo.dialog({
+			title: "Notas",
+	    	resizable: false,
+			autoOpen: true,
+			modal: true,
+			height: 250,
+			width:750,
+	        buttons: {
+		          Cerrar: function() {
+		            $( this ).dialog( "destroy" );
+		          }
+		    },
+	    	close: function(event, ui ){
+	    		$(this).dialog( "destroy" );
+	    	},
+		    open: function( event, ui ) {
+				$.post(url,  function(data){
+					dialogo.html(data);
+				});
+		    }
+	    });
+	});
+
 });
 </script>
